--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -146,4 +146,12 @@
         app:layout_constraintHorizontal_bias="0.027"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Rene palomo"
+        tools:layout_editor_absoluteX="118dp"
+        tools:layout_editor_absoluteY="593dp" />
+
 </android.support.constraint.ConstraintLayout>
